# vsearch

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
.github/workflows/: codeql.yml
examples/: equery.rs
src/: config.rs  lib.rs  main.rs
