[package]
name = "vsearch"
version = "0.1.1"
edition = "2024"

[dependencies]
basic-toml = "*"
bincode = "2.0.1"
fastembed = { version = "5.8.1", features = ["hf-hub-rustls-tls", "ort-download-binaries"], default-features = false }
fjall = { version = "2.11.2", default-features = false, features = [
    "single_writer_tx",
    "miniz",
] }
qdrant-client = "1.16.0"
scraper = "0.25.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = [
    "release_max_level_info",
    "max_level_info",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.ort]
version = "2.0.0-rc.11"
optional = true
features = ["cuda", "load-dynamic"]

[features]
default = []
cuda = ["ort", "fastembed/cuda"]

[profile.release]
lto = "fat"
strip = true
codegen-units = 1
panic = "abort"
rpath = false
